--- a/app.yaml
+++ b/app.yaml
@@ -2,8 +2,17 @@ runtime: python37
 service: default # サービス名
 entrypoint: gunicorn -b :$PORT main:app --config gunicorn.conf.py
 
-# 並列化(できれば)
-# threadsafe: true
+# 並列化
+threadsafe: true
 
 automatic_scaling:
   max_instances: 1 # スケールアウト時の最大インスタンス数
+
+handlers:
+  - url: /.*
+    script: main.app
+  - url: /static
+    static_dir: static
+
+includes:
+  - secret.yaml # APIキーなど環境変数はこちらへ
