--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,36 @@
+cachetools==3.1.1
+certifi==2019.9.11
+cffi==1.13.2
+chardet==3.0.4
 Click==7.0
+cryptography==2.8
 Flask==1.1.1
+-e git+https://github.com/mi-24v/Flask-FirebaseAuth@8c05d6353fd50783cc3769b1775a520dccd936f3#egg=Flask_FirebaseAuth
 Flask-JSON==0.3.4
+Flask-Login==0.4.1
+google-api-core==1.14.3
+google-auth==1.7.1
+google-cloud-core==1.0.3
+google-cloud-datastore==1.10.0
+google-cloud-firestore==1.6.0
+google-cloud-storage==1.23.0
+google-resumable-media==0.5.0
+googleapis-common-protos==1.6.0
+grpcio==1.25.0
 gunicorn==20.0.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+namegenerator==1.0.6
+protobuf==3.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+pycparser==2.19
+PyJWT==1.7.1
+pytz==2019.3
+requests==2.22.0
+rsa==4.0
+six==1.13.0
+urllib3==1.25.7
 Werkzeug==0.16.0
