--- a/app.yaml
+++ b/app.yaml
@@ -3,14 +3,12 @@ service: default # サービス名
 entrypoint: gunicorn -b :$PORT main:app --config gunicorn.conf.py
 
 # 並列化
-threadsafe: true
+# threadsafe: true
 
 automatic_scaling:
   max_instances: 1 # スケールアウト時の最大インスタンス数
 
 handlers:
-  - url: /.*
-    script: main.app
   - url: /static
     static_dir: static
 
