--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ MarkupSafe==1.1.1
 namegenerator==1.0.6
 numpy==1.17.4
 oauthlib==3.1.0
+opencv-python==4.1.2.30
 opt-einsum==3.1.0
 pandas==0.25.3
 protobuf==3.10.0
