--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==0.8.1
 astor==0.8.0
+attrs==19.3.0
 cachetools==3.1.1
 certifi==2019.9.11
 cffi==1.13.2
@@ -25,23 +26,30 @@ grpcio==1.25.0
 gunicorn==20.0.0
 h5py==2.10.0
 idna==2.8
+importlib-metadata==1.3.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
+more-itertools==8.0.2
 namegenerator==1.0.6
 numpy==1.17.4
 oauthlib==3.1.0
 opencv-python==4.1.2.30
 opt-einsum==3.1.0
+packaging==19.2
 pandas==0.25.3
+pluggy==0.13.1
 protobuf==3.10.0
+py==1.8.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 pycparser==2.19
 PyJWT==1.7.1
+pyparsing==2.4.5
+pytest==5.3.2
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
@@ -53,5 +61,7 @@ tensorflow==2.0.0
 tensorflow-estimator==2.0.1
 termcolor==1.1.0
 urllib3==1.25.7
+wcwidth==0.1.7
 Werkzeug==0.16.0
 wrapt==1.11.2
+zipp==0.6.0
